<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_login">

    <RelativeLayout
        android:id="@+id/mainRellay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:animateLayoutChanges="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"

            android:layout_marginBottom="20dp"
            android:animateLayoutChanges="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/progressBar"
            android:animateLayoutChanges="true"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="LOGIN"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    android:layout_marginTop="20dp"
                    app:counterTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"

                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:counterTextColor="@color/black"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"

                        android:inputType="textPassword"
                        android:textColorHint="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:id="@+id/rlRemember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/llRememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <CheckBox

                            android:id="@+id/rememberMeCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView

                            android:id="@+id/remember"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/remember"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                </RelativeLayout>


                <Button
                    android:id="@+id/loginBtn"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:theme="@style/Theme.MaterialComponents"
                    app:backgroundTint="#FF1B2539"
                    app:cornerRadius="10dp"
                    app:rippleColor="@color/white"
                    app:strokeColor="@color/white" />

                <Button
                    android:id="@+id/goto_registerBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:text="Register"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"

                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/tv_resetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Forgot Password? Reset here!"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
